swen430as1/tests/valid/trycatch/TryCatch_Valid_02.while
void main() {
    // Check syntax
    try {
	assert true;
    } catch(int x) {
	assert false;
    }
}
