swen430as1/tests/invalid/trycatch/TryCatch_Invalid_17.while
int f(int x) {
    try {
       x = false;
    } catch(int z) {

    }
}